spring-boot-istio-distributed-tracing-greeting-service/src/main/fabric8/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${project.artifactId}
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /greeting
        backend:
          serviceName: ${project.artifactId}
          servicePort: 8080
      - path: /greeting/.*
        backend:
          serviceName: ${project.artifactId}
          servicePort: 8080
